# rma-kinetics

./: .gitignore  Dockerfile  Justfile  README.md  mkdocs.yml  pyproject.toml  shell.nix
.github/workflows/: deploy-app.yml  deploy.yml  release.yml
app/: defaults.py  main.py  validators.py
docs/: index.md
docs/api/: solution.md  units.md
docs/api/models/: abstract.md  chemogenetic.md  constitutive.md  force.md  tetoff.md
docs/api/models/cno/: config.md  model.md
docs/api/models/dox/: config.md  model.md
docs/web/: guide.md
examples/: chemogenetic-model.py  constitutive-model.py  dox-schedule.py  tetoff-model.py
notebooks/: chemogenetic-rma.py  cno-high-dose-fit.py  cno-pk.py  constitutive-avg-sensitivity.py  constitutive-rma.py  dox-pk.py  gluc.py  sensitivity.py  temporal-resolution.py  tet-rma.py
notebooks/data/aav_rma_timecourse/CA1/: param_est.npy  solution.npy  source.csv
notebooks/data/aav_rma_timecourse/CP/: param_est.npy  solution.npy  source.csv
notebooks/data/aav_rma_timecourse/SN/: param_est.npy  solution.npy  source.csv
notebooks/data/cno_pk/: brain_clz.csv  brain_cno.csv  description.md  params_estimate.npy  plasma_clz.csv  plasma_cno.csv
notebooks/data/dreadd_activation/: cno_1_param_estimates.npy  cno_1_solution.npy  cno_2.5_param_estimates.npy  cno_2.5_solution.npy  cno_5_param_estimates.npy  cno_5_solution.npy  param_estimates.npy  source.csv
old/: dde_models.py
src/rma_kinetics/: units.py
src/rma_kinetics/models/: __init__.py  abstract.py  chemogenetic.py  cno.py  constitutive.py  dox.py  force.py  tet_induced.py
